# MRiLab

./: .gitignore  BlochKernelNormalCPU.m  DoScanAtCPU2.m  MacNotes.txt
Lib/src/: CMakeLists.txt
Lib/src/cmake/: FindIPP.cmake  FindMatlab.cmake
Lib/src/engine/: CMakeLists.txt
Lib/src/engine/CPUEngine/: CMakeLists.txt  DoCalSARAtCPU.cpp  DoScanAtCPU.cpp
Lib/src/engine/GPUEngine/: CMakeLists.txt  DoCESTScanAtGPU.cu  DoGMScanAtGPU.cu  DoMEScanAtGPU.cu  DoMTScanAtGPU.cu  DoScanAtGPU.cu
Lib/src/interface/DoMatToHDF5/: CMakeLists.txt
Lib/src/recon/: CMakeLists.txt
Lib/src/recon/DoGridding/: CMakeLists.txt
Lib/src/renderer/: CMakeLists.txt
Lib/src/renderer/DoKSpaceTrajVTK/: CMakeLists.txt
Lib/src/utilities/DoSARAverageAtCPU/: CMakeLists.txt
Macro/CoilElem/: CoilCircle.m  CoilRectangle.m
Macro/VObjElem/: VObjCylinder.m
Src/Engine/MATLAB/: BlochKernelNormalCPU.m  DoScanAtCPU_MATLAB.m
Src/Main/: SimuPanel.m
